add_executable(sum sum.cpp)
add_executable(count count.cpp)
add_executable(mean mean.cpp)
add_executable(infsup infsup.cpp)
add_executable(composite_accumulator composite_accumulator.cpp)

add_test(sum sum)
add_test(infsup infsup)
add_test(count count)
add_test(mean mean)
add_test(composite_accumulator composite_accumulator)
