add_executable(sum sum.cpp)
add_executable(count count.cpp)
add_executable(mean mean.cpp)
add_executable(infsup infsup.cpp)
add_executable(composite_accumulator composite_accumulator.cpp)

add_core_test(sum sum)
add_core_test(infsup infsup)
add_core_test(count count)
add_core_test(mean mean)
add_core_test(composite_accumulator composite_accumulator)
