set(test_prefix "UTAccu_")

add_executable(${test_prefix}sum sum.cpp)
add_executable(${test_prefix}count count.cpp)
add_executable(${test_prefix}mean mean.cpp)
add_executable(${test_prefix}rank rank.cpp)
add_executable(${test_prefix}infsup infsup.cpp)
add_executable(${test_prefix}composite_accumulator composite_accumulator.cpp)
add_executable(${test_prefix}min_elements min_elements.cpp)
add_executable(${test_prefix}max_elements max_elements.cpp)
add_executable(${test_prefix}moment_of_inertia moment_of_inertia.cpp)

add_core_test(${test_prefix}sum                       ${test_prefix}sum)
add_core_test(${test_prefix}infsup                    ${test_prefix}infsup)
add_core_test(${test_prefix}count                     ${test_prefix}count)
add_core_test(${test_prefix}mean                      ${test_prefix}mean)
add_core_test(${test_prefix}rank                      ${test_prefix}rank)
add_core_test(${test_prefix}min_elements              ${test_prefix}min_elements)
add_core_test(${test_prefix}max_elements              ${test_prefix}max_elements)
add_core_test(${test_prefix}composite_accumulator     ${test_prefix}composite_accumulator)
add_core_test(${test_prefix}moment_of_inertia         ${test_prefix}moment_of_inertia)
